--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image search</title>
+    <link href="https://fonts.cdnfonts.com/css/edu-tas-beginner" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css" />
     <script type="module" src="./index.js"></script>
   </head>
